[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "litestar-template"
version = "0.1.0"
description = "Litestar template"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Aliaksei Yafremau", email = "aleksey.yafremau@gmail.com" }
]

dependencies = [
    "litestar>=2.15.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
start_app = "litestar_template.main.cli:start"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "tox>=4.25.0",
]
