[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "litestar-template"
version = "0.1.0"
description = "Litestar template"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Aliaksei Yafremau", email = "aleksey.yafremau@gmail.com" }
]

dependencies = [
    "aiosqlite>=0.21.0",
    "litestar[sqlalchemy]>=2.15.1",
    "msgspec>=0.19.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "flake8>=7.1.2",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "tox>=4.25.0",
]

[project.scripts]
run = "litestar_template.main.cli:start"
