[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "litestar_todo"
version = "0.1.0"
description = "Litestar TODO app"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Aliaksei Yafremau", email = "aleksey.yafremau@gmail.com" }
]

dependencies = [
    "aiosqlite>=0.21.0",
    "litestar[sqlalchemy]>=2.15.1",
    "msgspec>=0.19.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.2",
    "tox>=4.25.0",
]

[project.scripts]
run = "litestar_todo.main.cli:start"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104", "D203", "D213", "COM812", "S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning"
]
